change short inline code back to @
breaks citations command, but using back tick breaks ``inverted commas''. *sigh*

--- a/preamble.tex
+++ b/preamble.tex
@@ -278,10 +278,10 @@
 \newcommand{\code}[1]{\lstinline[style=inline];#1;}
 \newcommand{\footcode}[1]{\lstinline[style=inline];#1;}
 
-\newcommand{\maketickcode}{\lstMakeShortInline[style=inline]`}
-\newcommand{\maketickchar}{\lstDeleteShortInline`}
+\newcommand{\makeatcode}{\lstMakeShortInline[style=inline]@}
+\newcommand{\makeatchar}{\lstDeleteShortInline@}
 
-\maketickcode
+\makeatcode
 \newcommand{\app}{\ensuremath{\mathbin{\texttt{\char"40}}}}
 
 
